--- a/src/main/resources/templates/newuser.html
+++ b/src/main/resources/templates/newuser.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Anansi Login</title>
+    <title>Anansi New User</title>
 
     <!-- Bootstrap CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -72,7 +72,7 @@
                     <a class="page-scroll" href="/logout">Log Out</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/#location">Location</a>
+                    <a class="page-scroll" href="/viewallorders">View Orders</a>
                 </li>
             </ul>
         </div>
@@ -94,7 +94,7 @@
     </div>
 </div>
 
-<div class="col-md-3 col-md-offset-2 data-order-section">
+<div class="col-md data-order-section">
     <div class="login">
         <form method="POST" action="/add_new_user_manual">
             <input type="text" name="username" placeholder="User name" required="">
@@ -129,23 +129,23 @@
 </footer>
 
 <!-- jQuery -->
-<script src="js/jquery.js"></script>
+<script src="/js/jquery.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
-<script src="js/bootstrap.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
 
 <!-- Plugin JavaScript -->
-<script src="js/jquery.easing.min.js"></script>
+<script src="/js/jquery.easing.min.js"></script>
 
 <!-- Custom Theme JavaScript -->
-<script src="js/grayscale.js"></script>
+<script src="/js/grayscale.js"></script>
 <!--[if lte IE 8]><script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script><![endif]-->
 
-<script src="js/jquery.isotope.min.js" type="text/javavscript"></script>
-<script src="js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
-<script src="js/custom.js" type="text/javascript"></script>
-<script src="js/jquery-1.8.2.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="js/wow.js"></script>
+<script src="/js/jquery.isotope.min.js" type="text/javavscript"></script>
+<script src="/js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
+<script src="/js/custom.js" type="text/javascript"></script>
+<script src="/js/jquery-1.8.2.min.js" type="text/javascript"></script>
+<script type="text/javascript" src="/js/wow.js"></script>
 
 </body>
 
