--- a/src/main/resources/templates/adminlogin.html
+++ b/src/main/resources/templates/adminlogin.html
@@ -7,140 +7,143 @@
 
         <head>
 
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="">
-        <meta name="author" content="">
+            <meta charset="utf-8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1">
+            <meta name="description" content="">
+            <meta name="author" content="">
 
-        <title>Anansi Admin Login</title>
+            <title>Anansi Admin Login</title>
 
-    <!-- Bootstrap CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/isotope.css" media="screen" />
-    <link rel="stylesheet" href="js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
+            <!-- Bootstrap CSS -->
+            <link href="css/bootstrap.min.css" rel="stylesheet">
+            <link rel="stylesheet" type="text/css" href="css/isotope.css" media="screen" />
+            <link rel="stylesheet" href="js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
 
-    <!-- Custom CSS -->
-    <link href="css/style.css" rel="stylesheet">
+            <!-- Custom CSS -->
+            <link href="css/style.css" rel="stylesheet">
 
-    <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+            <!-- Custom Fonts -->
+            <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+            <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+            <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
-    <!--Animate css-->
-    <link href="css/animate.css" rel="stylesheet" type="text/css">
+            <!--Animate css-->
+            <link href="css/animate.css" rel="stylesheet" type="text/css">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+            <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+            <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+<![endif]-->
 
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
-<!-- Navigation -->
-<nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                <i class="fa fa-bars"></i>
-            </button>
-            <a class="navbar-brand page-scroll" href="/">
-                <i class="fa fa-cubes"></i>  <span class="light">Anansi</span> Data
-            </a>
-        </div>
+    <!-- Navigation -->
+    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+                    <i class="fa fa-bars"></i>
+                </button>
+                <a class="navbar-brand page-scroll" href="/">
+                    <i class="fa fa-cubes"></i>  <span class="light">Anansi</span> Data
+                </a>
+            </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-            <ul class="nav navbar-nav">
-                <li class="hidden">
-                    <a href="#page-top"></a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="/#about">About</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="/#datasets">Datasets</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="/shoppingcart">Shopping Cart</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="/#team">Our team</a>
-                </li>
-                <li>
-                    <a class="page-scroll" th:href="@{|${loginRouting}|}"><span th:text="${loginstate}"></span></a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="/#location">Location</a>
-                </li>
-            </ul>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="hidden">
+                        <a href="#page-top"></a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/#about">About</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/#datasets">Datasets</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/shoppingcart">Shopping Cart</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/#team">Our team</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" th:href="@{|${loginRouting}|}"><span th:text="${loginstate}"></span></a>
+                    </li>
+                    <li th:unless="${loggedIn}">
+                        <a class="page-scroll" href="/#location">Location</a>
+                    </li>
+                    <li th:if="${loggedIn}">
+                        <a class="page-scroll" href="/viewallorders">View Orders</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
         </div>
-        <!-- /.navbar-collapse -->
-    </div>
-    <!-- /.container -->
-</nav>
+        <!-- /.container -->
+    </nav>
 
-<!-- Intro Header -->
-<div class="jumbotron jumbotron-billboard">
-    <div class="img"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center intro-body">
-                <h2 class="brand-heading-secondary">Admin Login</h2>
-                <a href="/" class="btn btn-default btn-lg">Back to Main Page</a>
+    <!-- Intro Header -->
+    <div class="jumbotron jumbotron-billboard">
+        <div class="img"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center intro-body">
+                    <h2 class="brand-heading-secondary">Admin Login</h2>
+                    <a href="/" class="btn btn-default btn-lg">Back to Main Page</a>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
-<div class="main center-block">   <!-- Login template from https://freefrontend.com/css-login-forms/    -->
-    <input type="checkbox" id="chk" aria-hidden="true">
+    <div class="main center-block">   <!-- Login template from https://freefrontend.com/css-login-forms/    -->
+        <input type="checkbox" id="chk" aria-hidden="true">
 
-    <div class="login">
-        <form method="POST" action="/validateadminlogin">
-            <label for="chk" aria-hidden="true">Login</label>
-            <input type="text" name="username" placeholder="Username" required="">
-            <input type="password" name="password" placeholder="Password" required="">
-            <p style="color: red; font-size: 0.75em; text-align: center;" th:if="${invalidpassword}">Incorrect Username or Password</p>
-            <button>Login</button>
-        </form>
+        <div class="login">
+            <form method="POST" action="/validateadminlogin">
+                <label for="chk" aria-hidden="true">Login</label>
+                <input type="text" name="username" placeholder="Username" required="">
+                <input type="password" name="password" placeholder="Password" required="">
+                <p style="color: red; font-size: 0.75em; text-align: center;" th:if="${invalidpassword}">Incorrect Username or Password</p>
+                <button>Login</button>
+            </form>
+        </div>
+
     </div>
 
-</div>
 
 
+    <!-- Footer -->
+    <footer>
+        <div class="container text-center">
+            <p>Copyright &copy; Anansi 2022</p>
+        </div>
+    </footer>
 
-<!-- Footer -->
-<footer>
-    <div class="container text-center">
-        <p>Copyright &copy; Anansi 2022</p>
-    </div>
-</footer>
+    <!-- jQuery -->
+    <script src="/js/jquery.js"></script>
 
-<!-- jQuery -->
-<script src="js/jquery.js"></script>
+    <!-- Bootstrap Core JavaScript -->
+    <script src="/js/bootstrap.min.js"></script>
 
-<!-- Bootstrap Core JavaScript -->
-<script src="js/bootstrap.min.js"></script>
+    <!-- Plugin JavaScript -->
+    <script src="/js/jquery.easing.min.js"></script>
 
-<!-- Plugin JavaScript -->
-<script src="js/jquery.easing.min.js"></script>
+    <!-- Custom Theme JavaScript -->
+    <script src="/js/grayscale.js"></script>
+    <!--[if lte IE 8]><script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script><![endif]-->
 
-<!-- Custom Theme JavaScript -->
-<script src="js/grayscale.js"></script>
-<!--[if lte IE 8]><script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script><![endif]-->
+        <script src="/js/jquery.isotope.min.js" type="text/javavscript"></script>
+        <script src="/js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
+        <script src="/js/custom.js" type="text/javascript"></script>
+        <script src="/js/jquery-1.8.2.min.js" type="text/javascript"></script>
+        <script type="text/javascript" src="/js/wow.js"></script>
 
-<script src="js/jquery.isotope.min.js" type="text/javavscript"></script>
-<script src="js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
-<script src="js/custom.js" type="text/javascript"></script>
-<script src="js/jquery-1.8.2.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="js/wow.js"></script>
+    </body>
 
-</body>
-
-</html>
+    </html>
