--- a/src/main/resources/templates/adminportal.html
+++ b/src/main/resources/templates/adminportal.html
@@ -63,7 +63,7 @@
                     <a class="page-scroll" href="/add_new_asset">Add New Asset</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/viewallorders">View All Orders</a>
+                    <a class="page-scroll" href="/viewallorders">View Orders</a>
                 </li>
                 <li>
                     <a class="page-scroll" th:href="@{|${loginRouting}|}"><span th:text="${loginstate}"></span></a>
@@ -122,25 +122,25 @@
 </footer>
 
 <!-- jQuery -->
-<script src="js/jquery.js"></script>
+<script src="/js/jquery.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
-<script src="js/bootstrap.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
 
 <!-- Plugin JavaScript -->
-<script src="js/jquery.easing.min.js"></script>
+<script src="/js/jquery.easing.min.js"></script>
 
 <!-- Custom Theme JavaScript -->
-<script src="js/grayscale.js"></script>
+<script src="/js/grayscale.js"></script>
 <!--[if lte IE 8]><script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script><![endif]-->
 
-<script src="js/jquery.isotope.min.js" type="text/javavscript"></script>
-<script src="js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
-<script src="js/custom.js" type="text/javascript"></script>
-<script src="js/jquery-1.8.2.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="js/wow.js"></script>
+<script src="/js/jquery.isotope.min.js" type="text/javavscript"></script>
+<script src="/js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
+<script src="/js/custom.js" type="text/javascript"></script>
+<script src="/js/jquery-1.8.2.min.js" type="text/javascript"></script>
+<script type="text/javascript" src="/js/wow.js"></script>
 <!--JS script for checkboxes-->
-<script src="js/datasets_all.js"></script>
+<script src="/js/datasets_all.js"></script>
 
 </body>
 
