--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -71,8 +71,11 @@
                         <li>
                             <a class="page-scroll" th:href="@{|${loginRouting}|}"><span th:text="${loginstate}"></span></a>
                         </li>
-                        <li>
+                        <li th:unless="${loggedIn}">
                             <a class="page-scroll" href="/#location">Location</a>
+                        </li>
+                        <li th:if="${loggedIn}">
+                            <a class="page-scroll" href="/viewallorders">View Orders</a>
                         </li>
                     </ul>
                 </div>
@@ -84,49 +87,49 @@
         <!-- Intro Header -->
         <div class="jumbotron jumbotron-billboard">
           <div class="img"></div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12 text-center intro-body">
-                      <h2 class="brand-heading-secondary">Login / Sign-up</h2>
-                        <a href="/" class="btn btn-default btn-lg">Back to Main Page</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+          <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center intro-body">
+                  <h2 class="brand-heading-secondary">Login / Sign-up</h2>
+                  <a href="/" class="btn btn-default btn-lg">Back to Main Page</a>
+              </div>
+          </div>
+      </div>
+  </div>
 
-        <div class="main center-block">   <!-- Login template from https://freefrontend.com/css-login-forms/    -->
-        <input type="checkbox" id="chk" aria-hidden="true">
-            <div class="login">
-                <form method="POST" action="/userlogin">
-                    <label for="chk" aria-hidden="true">Login</label>
-                    <input type="text" name="username" placeholder="Username" required="">
-                    <input type="password" name="password" placeholder="Password" required="">
-                    <input type="text" name="redirectTo" th:value="${goHereAfterLogin}" style="display: none;">
-                    <p style="color: red; font-size: 0.75em; text-align: center;" th:if="${invalidpassword}">Incorrect Username or Password</p>
-                    <button>Login</button>
-                </form>
-            </div>
-
-
-            <div class="signup">
-                <form method="POST" action="/addnewuser">
-                    <label for="chk" aria-hidden="true">Sign up</label>
-                    <input type="text" name="username" placeholder="User name" required="">
-                    <input type="password" name="password" placeholder="Password" required="">
-                    <input type="text" name="name" placeholder="Full Name" required="">
-                    <input type="email" name="email" placeholder="Email" required="">
-                    <input type="text" name="redirectTo" th:value="${goHereAfterLogin}" style="display: none;">
-                    <p style="color: red; font-size: 0.75em; text-align: center;" th:if="${usedusername}">
-                        Username is already taken. Please try again.
-                    </p>
-                    <button type="submit">Sign up</button>
-                </form>
-            </div>
-
-
+  <div class="main center-block">   <!-- Login template from https://freefrontend.com/css-login-forms/    -->
+    <input type="checkbox" id="chk" aria-hidden="true">
+    <div class="login">
+        <form method="POST" action="/userlogin">
+            <label for="chk" aria-hidden="true">Login</label>
+            <input type="text" name="username" placeholder="Username" required="">
+            <input type="password" name="password" placeholder="Password" required="">
+            <input type="text" name="redirectTo" th:value="${goHereAfterLogin}" style="display: none;">
+            <p style="color: red; font-size: 0.75em; text-align: center;" th:if="${invalidpassword}">Incorrect Username or Password</p>
+            <button>Login</button>
+        </form>
     </div>
 
-            
+
+    <div class="signup">
+        <form method="POST" action="/addnewuser">
+            <label for="chk" aria-hidden="true">Sign up</label>
+            <input type="text" name="username" placeholder="User name" required="">
+            <input type="password" name="password" placeholder="Password" required="">
+            <input type="text" name="name" placeholder="Full Name" required="">
+            <input type="email" name="email" placeholder="Email" required="">
+            <input type="text" name="redirectTo" th:value="${goHereAfterLogin}" style="display: none;">
+            <p style="color: red; font-size: 0.75em; text-align: center;" th:if="${usedusername}">
+                Username is already taken. Please try again.
+            </p>
+            <button type="submit">Sign up</button>
+        </form>
+    </div>
+
+
+</div>
+
+
 
 <!-- Footer -->
 <footer>
@@ -136,23 +139,23 @@
 </footer>
 
 <!-- jQuery -->
-<script src="js/jquery.js"></script>
+<script src="/js/jquery.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
-<script src="js/bootstrap.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
 
 <!-- Plugin JavaScript -->
-<script src="js/jquery.easing.min.js"></script>
+<script src="/js/jquery.easing.min.js"></script>
 
 <!-- Custom Theme JavaScript -->
-<script src="js/grayscale.js"></script>
+<script src="/js/grayscale.js"></script>
 <!--[if lte IE 8]><script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script><![endif]-->
 
-    <script src="js/jquery.isotope.min.js" type="text/javavscript"></script>
-    <script src="js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
-    <script src="js/custom.js" type="text/javascript"></script>
-    <script src="js/jquery-1.8.2.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="js/wow.js"></script> 
+    <script src="/js/jquery.isotope.min.js" type="text/javavscript"></script>
+    <script src="/js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
+    <script src="/js/custom.js" type="text/javascript"></script>
+    <script src="/js/jquery-1.8.2.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="/js/wow.js"></script> 
 
 </body>
 
