--- a/src/main/resources/templates/update_data.html
+++ b/src/main/resources/templates/update_data.html
@@ -33,7 +33,7 @@
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+<![endif]-->
 
     <style>
         textarea {
@@ -47,134 +47,134 @@
             font-size: 16px;
             resize: none; }
 
-        input[type=text] {
-            width: 100%;
-            box-sizing: border-box;
-            border: 2px solid #ccc;
-            border-radius: 4px;
-            font-size: 16px;
-            background-color: white;
-            background-position: 10px 10px;
-            background-repeat: no-repeat; }
-    </style>
+            input[type=text] {
+                width: 100%;
+                box-sizing: border-box;
+                border: 2px solid #ccc;
+                border-radius: 4px;
+                font-size: 16px;
+                background-color: white;
+                background-position: 10px 10px;
+                background-repeat: no-repeat; }
+            </style>
 
-</head>
+        </head>
 
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+        <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
-<!-- Navigation -->
-<nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                <i class="fa fa-bars"></i>
-            </button>
-            <a class="navbar-brand page-scroll" href="/">
-                <i class="fa fa-cubes"></i>  <span class="light">Anansi</span> Data
-            </a>
-        </div>
+            <!-- Navigation -->
+            <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+                <div class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+                            <i class="fa fa-bars"></i>
+                        </button>
+                        <a class="navbar-brand page-scroll" href="/">
+                            <i class="fa fa-cubes"></i>  <span class="light">Anansi</span> Data
+                        </a>
+                    </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-            <ul class="nav navbar-nav">
-                <li class="hidden">
-                    <a href="#page-top"></a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="/#about">About</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="/#datasets">Datasets</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="/#team">Our team</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="/shoppingcart">Shopping Cart</a>
-                </li>
-                <li>
-                    <a class="page-scroll" th:href="@{|${loginRouting}|}"><span th:text="${loginstate}"></span></a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="/#location">Location</a>
-                </li>
-            </ul>
-        </div>
-        <!-- /.navbar-collapse -->
-    </div>
-    <!-- /.container -->
-</nav>
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+                        <ul class="nav navbar-nav">
+                            <li class="hidden">
+                                <a href="#page-top"></a>
+                            </li>
+                            <li>
+                                <a class="page-scroll" href="/#about">About</a>
+                            </li>
+                            <li>
+                                <a class="page-scroll" href="/#datasets">Datasets</a>
+                            </li>
+                            <li>
+                                <a class="page-scroll" href="/#team">Our team</a>
+                            </li>
+                            <li>
+                                <a class="page-scroll" href="/shoppingcart">Shopping Cart</a>
+                            </li>
+                            <li>
+                                <a class="page-scroll" th:href="@{|${loginRouting}|}"><span th:text="${loginstate}"></span></a>
+                            </li>
+                            <li >
+                                <a class="page-scroll" href="/viewallorders">View Orders</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- /.navbar-collapse -->
+                </div>
+                <!-- /.container -->
+            </nav>
 
-<!-- Intro Header -->
-<div class="jumbotron jumbotron-billboard">
-    <div class="img"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center intro-body">
-                <h2 th:if="${exists}" th:text="${asset.getAssetname()}" class="brand-heading-secondary"></h2>
-                <h2 th:unless="${exists}" class="brand-heading-secondary">Dataset Does Not Exist</h2>
+            <!-- Intro Header -->
+            <div class="jumbotron jumbotron-billboard">
+                <div class="img"></div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12 text-center intro-body">
+                            <h2 th:if="${exists}" th:text="${asset.getAssetname()}" class="brand-heading-secondary"></h2>
+                            <h2 th:unless="${exists}" class="brand-heading-secondary">Dataset Does Not Exist</h2>
 
-                <a href="/adminportal" class="btn btn-default btn-lg">Back to Asset List</a>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="container">
-    <div class="row">
-        <th:block th:if="${exists}">
-            <div class="col-md-6 dataitem-description">
-                <p>Category: <strong th:text="${asset.getAsset_type().getTypename()}"></strong></p>
-                <p><strong>Description:</strong></br>
-                    <span th:text="${asset.getAssetdesc()}"></span></p>
-                <p>Dataset Size: <strong th:text="${asset.getAssetsize()}"></strong></p>
-                <p>Price Per Datapoint: <strong th:text="${asset.getAssetcost()}"></strong></p>
+                            <a href="/adminportal" class="btn btn-default btn-lg">Back to Asset List</a>
+                        </div>
+                    </div>
+                </div>
             </div>
 
-                <div class="col-md-3 col-md-offset-2 data-order-section">
-                    <form method="POST" action="/update_data_asset_db">
-                        <input type="text" name="assetid" th:value="${asset.getData_asset_id()}" style="display: none;">
-                        <input type="text" name="assetname" th:value="${asset.getAssetname()}">
-                        <input type="text" name="assetcost" th:value="${asset.getAssetcost()}">
-                        <input type="text" name="assetsize" th:value="${asset.getAssetsize()}">
-                        <textarea name="assetdesc" th:text="${asset.getAssetdesc()}">
-                        </textarea>
-                        <input type="text" name="featured" th:value="${asset.isFeatured()}">
-                        <input type="text" name="active" th:value="${asset.isActive()}">
-                        <button type="submit">Update Dataset</button>
-                    </form>
+            <div class="container">
+                <div class="row">
+                    <th:block th:if="${exists}">
+                        <div class="col-md-6 dataitem-description">
+                            <p>Category: <strong th:text="${asset.getAsset_type().getTypename()}"></strong></p>
+                            <p><strong>Description:</strong></br>
+                                <span th:text="${asset.getAssetdesc()}"></span></p>
+                                <p>Dataset Size: <strong th:text="${asset.getAssetsize()}"></strong></p>
+                                <p>Price Per Datapoint: <strong th:text="${asset.getAssetcost()}"></strong></p>
+                            </div>
+
+                            <div class="col-md-3 col-md-offset-2 data-order-section">
+                                <form method="POST" action="/update_data_asset_db">
+                                    <input type="text" name="assetid" th:value="${asset.getData_asset_id()}" style="display: none;">
+                                    <input type="text" name="assetname" th:value="${asset.getAssetname()}">
+                                    <input type="text" name="assetcost" th:value="${asset.getAssetcost()}">
+                                    <input type="text" name="assetsize" th:value="${asset.getAssetsize()}">
+                                    <textarea name="assetdesc" th:text="${asset.getAssetdesc()}">
+                                    </textarea>
+                                    <input type="text" name="featured" th:value="${asset.isFeatured()}">
+                                    <input type="text" name="active" th:value="${asset.isActive()}">
+                                    <button type="submit">Update Dataset</button>
+                                </form>
+                            </div>
+
+
+                        </th:block>
+                    </div>
                 </div>
 
 
-        </th:block>
-    </div>
-</div>
+                <!-- Footer -->
+                <footer>
+                    <div class="container text-center">
+                        <p>Copyright &copy; Anansi 2022</p>
+                    </div>
+                </footer>
 
+                <!-- jQuery -->
+                <script src="/js/jquery.js"></script>
 
-<!-- Footer -->
-<footer>
-    <div class="container text-center">
-        <p>Copyright &copy; Anansi 2022</p>
-    </div>
-</footer>
+                <!-- Bootstrap Core JavaScript -->
+                <script src="/js/bootstrap.min.js"></script>
 
-<!-- jQuery -->
-<script src="/js/jquery.js"></script>
+                <!-- Plugin JavaScript -->
+                <script src="/js/jquery.easing.min.js"></script>
 
-<!-- Bootstrap Core JavaScript -->
-<script src="/js/bootstrap.min.js"></script>
+                <!-- Custom Theme JavaScript -->
+                <script src="/js/grayscale.js"></script>
+                <!--[if lte IE 8]><script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script><![endif]-->
 
-<!-- Plugin JavaScript -->
-<script src="/js/jquery.easing.min.js"></script>
+                    <script src="/js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
+                    <script src="/js/custom.js" type="text/javascript"></script>
+                    <script type="text/javascript" src="/js/wow.js"></script>
+                    <script src="/js/quantity_control.js"></script>
+                </body>
 
-<!-- Custom Theme JavaScript -->
-<script src="/js/grayscale.js"></script>
-<!--[if lte IE 8]><script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script><![endif]-->
-
-<script src="/js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
-<script src="/js/custom.js" type="text/javascript"></script>
-<script type="text/javascript" src="/js/wow.js"></script>
-<script src="/js/quantity_control.js"></script>
-</body>
-
-</html>
+                </html>
