--- a/src/main/resources/templates/view_all_orders.html
+++ b/src/main/resources/templates/view_all_orders.html
@@ -33,115 +33,115 @@
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+<![endif]-->
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
-<!-- Navigation -->
-<nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                <i class="fa fa-bars"></i>
-            </button>
-            <a class="navbar-brand page-scroll" href="/">
-                <i class="fa fa-cubes"></i>  <span class="light">Anansi</span> Data
-            </a>
-        </div>
+    <!-- Navigation -->
+    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+                    <i class="fa fa-bars"></i>
+                </button>
+                <a class="navbar-brand page-scroll" href="/">
+                    <i class="fa fa-cubes"></i>  <span class="light">Anansi</span> Data
+                </a>
+            </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-            <ul class="nav navbar-nav">
-                <li class="hidden">
-                    <a href="#page-top"></a>
-                </li>
-                <li th:if="${admin}">
-                    <a class="page-scroll" href="/newuser">Add New User</a>
-                </li>
-                <li th:if="${admin}">
-                    <a class="page-scroll" href="/add_new_asset">Add New Asset</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="/viewallorders">Orders</a>
-                </li>
-                <li>
-                    <a class="page-scroll" th:href="@{|${loginRouting}|}"><span th:text="${loginstate}"></span></a>
-                </li>
-            </ul>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="hidden">
+                        <a href="#page-top"></a>
+                    </li>
+                    <li th:if="${admin}">
+                        <a class="page-scroll" href="/newuser">Add New User</a>
+                    </li>
+                    <li th:if="${admin}">
+                        <a class="page-scroll" href="/add_new_asset">Add New Asset</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" th:href="@{|${loginRouting}|}"><span th:text="${loginstate}"></span></a>
+                    </li>
+                    <li th:if="${loggedIn}">
+                        <a class="page-scroll" href="/viewallorders">View Orders</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
         </div>
-        <!-- /.navbar-collapse -->
-    </div>
-    <!-- /.container -->
-</nav>
+        <!-- /.container -->
+    </nav>
 
-<!-- Intro Header -->
-<div class="jumbotron jumbotron-billboard">
-    <div class="img"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center intro-body">
-                <h2 th:if="${admin}" class="brand-heading-secondary">View All Orders</h2>
-                <h2 th:unless="${admin}" class="brand-heading-secondary">Your Order History</h2>
-                <a href="/" class="btn btn-default btn-lg">Back to Main Page</a>
-                <a href="/adminportal" th:if="${admin}" class="btn btn-default btn-lg">Back to Admin Portal</a>
+    <!-- Intro Header -->
+    <div class="jumbotron jumbotron-billboard">
+        <div class="img"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center intro-body">
+                    <h2 th:if="${admin}" class="brand-heading-secondary">View All Orders</h2>
+                    <h2 th:unless="${admin}" class="brand-heading-secondary">Your Order History</h2>
+                    <a href="/" class="btn btn-default btn-lg">Back to Main Page</a>
+                    <a href="/adminportal" th:if="${admin}" class="btn btn-default btn-lg">Back to Admin Portal</a>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
-<div class="container-fluid shoppingcart cart">
-    <div class="row">
-        <div th:if="${loggedIn}">
-            <h2 id="cart_title">Orders</h2>
-            <div class="table-responsive cart_table">
-                <table class="table">
-                  <thead>
-                    <tr>
-                      <th scope="col" class="border-0 bg-light">
-                        <div class="p-2 px-3 text-uppercase">Order ID</div>
-                    </th>
-                    <th scope="col" class="border-0 bg-light">
-                        <div class="py-2 text-uppercase">Date</div>
-                    </th>
-                    <th scope="col" class="border-0 bg-light">
-                        <div class="py-2 text-uppercase">Status</div>
-                    </th>
-                    <th scope="col" class="border-0 bg-light">
-                        <div class="py-2 text-uppercase">Cost</div>
-                    </th>
-                    <th scope="col" class="border-0 bg-light">
-                        <div class="py-2 text-uppercase">View</div>
-                    </th>
-                    <th th:if="${admin}" scope="col" class="border-0 bg-light">
-                        <div class="py-2 text-uppercase">Customer ID</div>
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-                <th:block th:if="${admin}" th:each="order: ${orders}">
+    <div class="container-fluid shoppingcart cart">
+        <div class="row">
+            <div th:if="${loggedIn}">
+                <h2 id="cart_title">Orders</h2>
+                <div class="table-responsive cart_table">
+                    <table class="table">
+                      <thead>
+                        <tr>
+                          <th scope="col" class="border-0 bg-light">
+                            <div class="p-2 px-3 text-uppercase">Order ID</div>
+                        </th>
+                        <th scope="col" class="border-0 bg-light">
+                            <div class="py-2 text-uppercase">Date</div>
+                        </th>
+                        <th scope="col" class="border-0 bg-light">
+                            <div class="py-2 text-uppercase">Status</div>
+                        </th>
+                        <th scope="col" class="border-0 bg-light">
+                            <div class="py-2 text-uppercase">Cost</div>
+                        </th>
+                        <th scope="col" class="border-0 bg-light">
+                            <div class="py-2 text-uppercase">View</div>
+                        </th>
+                        <th th:if="${admin}" scope="col" class="border-0 bg-light">
+                            <div class="py-2 text-uppercase">Customer ID</div>
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <th:block th:if="${admin}" th:each="order: ${orders}">
+                        <td class="border-0 text-muted">
+                            <span th:text="${order.getOrder_id()}"></span>
+                        </td>
+                        <td class="border-0 text-muted">
+                            <span th:text="${order.getDate()}"></span>
+                        </td>
+                        <td class="border-0 text-muted">
+                            <span th:text="${order.getStatus()}"></span>
+                        </td>
+                        <td class="border-0 text-muted">&euro;
+                            <span th:text="${order.getTotPrice()}"></span>
+                        </td>
+                        <td class="border-0 text-muted">
+                            <a th:href="@{${'/view_order/' + order.getOrder_id()}}">View Order</a>
+                        </td>
+                        <td th:if="${admin}" class="border-0 text-muted">
+                            <span th:text="${order.getUser().getId()}"></span>
+                        </td>
+                    </tr>
+                </th:block> 
+                <th:block th:unless="${admin}" th:each="order: ${ordersByCustomer}">
                     <td class="border-0 text-muted">
-                        <span th:text="${order.getOrder_id()}"></span>
-                    </td>
-                    <td class="border-0 text-muted">
-                        <span th:text="${order.getDate()}"></span>
-                    </td>
-                    <td class="border-0 text-muted">
-                        <span th:text="${order.getStatus()}"></span>
-                    </td>
-                    <td class="border-0 text-muted">&euro;
-                        <span th:text="${order.getTotPrice()}"></span>
-                    </td>
-                    <td class="border-0 text-muted">
-                        <a th:href="@{${'/view_order/' + order.getOrder_id()}}">View Order</a>
-                    </td>
-                     <td th:if="${admin}" class="border-0 text-muted">
-                        <span th:text="${order.getUser().getId()}"></span>
-                    </td>
-                </tr>
-            </th:block> 
-            <th:block th:unless="${admin}" th:each="order: ${ordersByCustomer}">
-                <td class="border-0 text-muted">
                         <span th:text="${order.getOrder_id()}"></span>
                     </td>
                     <td class="border-0 text-muted">
@@ -170,36 +170,6 @@
 </div>
 </div>
 
-<!-- <div class="container">
-    <div class="row">
-        <div class="col-md all-data-assets"> 
-            <th:block th:if="${admin}" th:each="order: ${orders}">
-
-                    <div class="all-data-asset" th:attr="data-type-id=${order.getOrder_id()}">
-                        <h3 th:text="${order.getDate()}"></h3>
-                        <p th:text="${order.getStatus()}"></p>
-                        <p th:text="${order.getTotPrice()}"></p>
-                        <a th:href="@{${'/view_order/' + order.getOrder_id()}}">View Order</a>
-                    </div>
-
-            </th:block>
-        </div>
-        <div class="col-md all-data-assets">
-            <th:block th:unless="${admin}" th:each="order: ${ordersByCustomer}">
-
-                    <div class="all-data-asset" th:attr="data-type-id=${order.getOrder_id()}">
-                        <h3 th:text="${order.getDate()}"></h3>
-                        <p th:text="${order.getStatus()}"></p>
-                        <p th:text="${order.getTotPrice()}"></p>
-                        <a th:href="@{${'/view_order/' + order.getOrder_id()}}">View Order</a>
-                    </div>
-
-            </th:block>
-        </div>
-    </div>
-</div> -->
-
-
 <!-- Footer -->
 <footer>
     <div class="container text-center">
@@ -220,13 +190,13 @@
 <script src="/js/grayscale.js"></script>
 <!--[if lte IE 8]><script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script><![endif]-->
 
-<script src="/js/jquery.isotope.min.js" type="text/javavscript"></script>
-<script src="/js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
-<script src="/js/custom.js" type="text/javascript"></script>
-<script src="/js/jquery-1.8.2.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="/js/wow.js"></script>
-<!--JS script for checkboxes-->
-<script src="/js/datasets_all.js"></script>
+    <script src="/js/jquery.isotope.min.js" type="text/javavscript"></script>
+    <script src="/js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
+    <script src="/js/custom.js" type="text/javascript"></script>
+    <script src="/js/jquery-1.8.2.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="/js/wow.js"></script>
+    <!--JS script for checkboxes-->
+    <script src="/js/datasets_all.js"></script>
 
 </body>
 
