--- a/src/main/resources/templates/view_data.html
+++ b/src/main/resources/templates/view_data.html
@@ -73,8 +73,11 @@
                         <li>
                             <a class="page-scroll" th:href="@{|${loginRouting}|}"><span th:text="${loginstate}"></span></a>
                         </li>
-                        <li>
+                        <li th:unless="${loggedIn}">
                             <a class="page-scroll" href="/#location">Location</a>
+                        </li>
+                        <li th:if="${loggedIn}">
+                            <a class="page-scroll" href="/viewallorders">View Orders</a>
                         </li>
                     </ul>
                 </div>
@@ -86,53 +89,53 @@
         <!-- Intro Header -->
         <div class="jumbotron jumbotron-billboard">
           <div class="img"></div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12 text-center intro-body">
-                      <h2 th:if="${exists}" th:text="${asset.getAssetname()}" class="brand-heading-secondary"></h2>
-                      <h2 th:unless="${exists}" class="brand-heading-secondary">Dataset Does Not Exist</h2>
+          <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center intro-body">
+                  <h2 th:if="${exists}" th:text="${asset.getAssetname()}" class="brand-heading-secondary"></h2>
+                  <h2 th:unless="${exists}" class="brand-heading-secondary">Dataset Does Not Exist</h2>
 
-                        <a href="/" class="btn btn-default btn-lg">Back to Main Page</a>
-                    </div>
-                </div>
-            </div>
+                  <a href="/" class="btn btn-default btn-lg">Back to Main Page</a>
+              </div>
+          </div>
+      </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+        <div class="col-md-3 data-back-section">
+            <button onclick="window.location.href='/datasets_all'"><span class="fas fa-arrow-left"></span> All Datasets</button>
         </div>
-
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3 data-back-section">
-                    <button onclick="window.location.href='/datasets_all'"><span class="fas fa-arrow-left"></span> All Datasets</button>
+    </div>
+    <div class="row">
+        <th:block th:if="${exists}">
+            <div class="col-md-6 dataitem-description">
+                <p>Category: <strong th:text="${asset.getAsset_type().getTypename()}"></strong></p>
+                <p><strong>Description:</strong></br>
+                    <span th:text="${asset.getAssetdesc()}"></span></p>
+                    <p>Dataset Size: <strong th:text="${asset.getAssetsize()}"></strong></p>
+                    <p>Price Per Datapoint: <strong th:text="${asset.getAssetcost()}"></strong></p>
                 </div>
-            </div>
-            <div class="row">
-                <th:block th:if="${exists}">
-                    <div class="col-md-6 dataitem-description">
-                        <p>Category: <strong th:text="${asset.getAsset_type().getTypename()}"></strong></p>
-                        <p><strong>Description:</strong></br>
-                        <span th:text="${asset.getAssetdesc()}"></span></p>
-                        <p>Dataset Size: <strong th:text="${asset.getAssetsize()}"></strong></p>
-                        <p>Price Per Datapoint: <strong th:text="${asset.getAssetcost()}"></strong></p>
+                <th:block th:if="${loggedIn}">
+                    <div class="col-md-3 col-md-offset-2 data-order-section">
+                        <form method="POST" action="/add_data_cart">
+                            <label class="data-label" for="qty">Quantity:</label>
+                            <!-- <input class="data-input-text" type="number" name="qty" id="qty" min="1" th:max="${asset.getAssetsize()}" required /> -->
+                            <span th:replace="quantity_control :: quantity_control(1, ${asset.getData_asset_id()})"></span>
+                            <input type="hidden" name="datasetID" th:value="${asset.getData_asset_id()}">
+                            <button type="submit">Add To Cart</button>
+                        </form>
                     </div>
-                    <th:block th:if="${loggedIn}">
-                        <div class="col-md-3 col-md-offset-2 data-order-section">
-                            <form method="POST" action="/add_data_cart">
-                                <label class="data-label" for="qty">Quantity:</label>
-                                <!-- <input class="data-input-text" type="number" name="qty" id="qty" min="1" th:max="${asset.getAssetsize()}" required /> -->
-                                <span th:replace="quantity_control :: quantity_control(1, ${asset.getData_asset_id()})"></span>
-                                <input type="hidden" name="datasetID" th:value="${asset.getData_asset_id()}">
-                                <button type="submit">Add To Cart</button>
-                            </form>
-                        </div>
-                    </th:block>
-                    <th:block th:unless="${loggedIn}">
-                        <div class="col-md-3 col-md-offset-2 data-login-section">
-                            <!-- <button onclick="window.location.href='/login';">Login To Order</button> -->
-                            <button th:attr="onclick=|window.location.href='/login?after=%2fview_data%2f${asset.getData_asset_id()}'|"> Login To Order</button>
-                        </div>
-                    </th:block>
                 </th:block>
-            </div>
+                <th:block th:unless="${loggedIn}">
+                    <div class="col-md-3 col-md-offset-2 data-login-section">
+                        <!-- <button onclick="window.location.href='/login';">Login To Order</button> -->
+                        <button th:attr="onclick=|window.location.href='/login?after=%2fview_data%2f${asset.getData_asset_id()}'|"> Login To Order</button>
+                    </div>
+                </th:block>
+            </th:block>
         </div>
+    </div>
         <!-- <div class="container">
             <div class="row">
                 <div class="col-md-4 filters">
@@ -153,16 +156,16 @@
                 </div>
             </div>
         </div> -->
-            
+        
 
-<!-- Footer -->
-<footer>
-    <div class="container text-center">
-        <p>Copyright &copy; Anansi 2022</p>
-    </div>
-</footer>
+        <!-- Footer -->
+        <footer>
+            <div class="container text-center">
+                <p>Copyright &copy; Anansi 2022</p>
+            </div>
+        </footer>
 
- <!-- jQuery -->
+        <!-- jQuery -->
         <script src="/js/jquery.js"></script>
 
         <!-- Bootstrap Core JavaScript -->
@@ -175,10 +178,10 @@
         <script src="/js/grayscale.js"></script>
         <!--[if lte IE 8]><script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script><![endif]-->
 
-        <script src="/js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
-        <script src="/js/custom.js" type="text/javascript"></script>
-        <script type="text/javascript" src="/js/wow.js"></script> 
-        <script src="/js/quantity_control.js"></script>
-</body>
+            <script src="/js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
+            <script src="/js/custom.js" type="text/javascript"></script>
+            <script type="text/javascript" src="/js/wow.js"></script> 
+            <script src="/js/quantity_control.js"></script>
+        </body>
 
-</html>
+        </html>
